# f1t

./: .gitignore  CMakeLists.txt  package.xml
jn/: net.ipynb  parser.ipynb  test_net.ipynb
jn/.ipynb_checkpoints/: test_net-checkpoint.ipynb
launch/: converter.launch  f1t.launch
notebooks/: net.ipynb  net.py  parser.ipynb  test_net.ipynb  test_steer.csv  train_steer.csv
scripts/: model.py
src/: bw_converter.cpp  image_converter.cpp  model_node.cpp  node.cpp
